# Hyper-Alpha-Arena008

./: .gitignore  README.md  README.zh-CN.md  docker-compose.yml
backend/: main.py  pyproject.toml  version.py
backend/api/: account_routes.py  analytics_routes.py  arena_routes.py  binance_routes.py  bot_routes.py  factor_routes.py  hyper_ai_routes.py  hyperliquid_routes.py  kline_analysis_routes.py  market_intelligence_routes.py  order_routes.py  prompt_backtest_routes.py  signal_routes.py  system_routes.py  trader_data_routes.py
backend/backtest/: __init__.py  engine.py  execution_simulator.py  historical_data_provider.py  models.py  virtual_account.py
backend/config/: PROGRAM_DEV_GUIDE.md  PROGRAM_DEV_GUIDE_ZH.md  PROMPT_VARIABLES_REFERENCE.md  PROMPT_VARIABLES_REFERENCE_ZH.md  hyper_ai_knowledge_base.md  hyper_ai_system_prompt.md  prompt_generation_system_prompt.md
backend/database/: migration_manager.py  models.py
backend/program_trader/: data_provider.py  executor.py  models.py  test_module.py  validator.py
backend/repositories/: account_repo.py  prompt_repo.py  strategy_repo.py
backend/routes/: program_routes.py
backend/schemas/: account.py  signal.py
backend/services/: ai_attribution_service.py  ai_context_compression_service.py  ai_decision_service.py  ai_program_service.py  ai_prompt_generation_service.py  ai_prompt_shared_tools.py  ai_shared_tools.py  ai_signal_generation_service.py  ai_stream_service.py  asset_curve_calculator.py  asset_snapshot_service.py  binance_snapshot_service.py  binance_symbol_service.py  binance_trading_client.py  (+23 more)
(+50 files in other folders)
